@@ -262,6 +262,9 @@ TOPOLOGY_POLICE 0       # the topology police is your last defense against tunne
                         # detect tunneling ( passing from one side of a wall to the other ) and kills the tunneler
                         # afterwards. It is disabled by default because there is a risk of false accusations, and because
                         # the regular game machanisms are tunneling-proof in theory except for "fresh" walls.
+TOPOLOGY_POLICE_PARALLEL 1 # if TOPOLOGY_POLICE is set to 1, this flag can be disabled to disable checks for parallel walls.
+                           # Depending on the server's other settings, those can be false alarms in most cases.
+
 
 ############################################################################################
 #
@@ -448,6 +451,7 @@ COLOR_STRINGS 1             # Generate strings that will be rendered with color 
 FILTER_COLOR_STRINGS 0      # Filter color codes from all strings coming in over the network.
 FILTER_COLOR_NAMES 0        # Filter color codes from player names.
 FILTER_NAME_ENDS 1          # Filter whitespace from beginning and end of player names.
+FILTER_NAME_MIDDLE 1        # Filter excess whitespace and other junk from the middle of player names.
 FILTER_COLOR_SERVER_NAMES 0 # Filter color codes from server names in the server browser.
 
 SILENCE_ALL 0      # silence all chat messages?
