@@ -3519,7 +3519,8 @@ bool gGame::GameLoop(bool input){
                     rSysDep::ClearGL();
             }
 
-            rSysDep::SwapGL();
+            if ( input )
+                rSysDep::SwapGL();
 #endif
         }
         else
